1. Fixed problem with too low z-index value in navbar-wrapper for large screen

--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -206,6 +206,7 @@ ul li:nth-child(3) {
         justify-content: space-between;
         margin: 0 auto;
         height: 70px;    
+        z-index: 700;
     }
 
     .navbar {
